--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>SpaceWalkers</title>
 
@@ -17,7 +18,18 @@
 <body>
 
  <!-- navigation code here -->
-
+<nav>
+  <div class="spacewalk">
+    <h1>SpaceWalkers</h1>
+  </div>
+  <div>
+    <a>Home</a>
+    <a>About Us</a>
+    <a>Blog</a>
+    <a>Contact</a>
+    <a>Sign In</a>
+  </div>
+</nav>
   <div class="container home">
 
     <header class="intro">
