using ID selectors for mobile

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         equals. The airman's earth, if free men make it.</p>
     </section>
 
-    <section class="walk">
-      <div class="walk-text">
+    <section id="walk" class="walk">
+      <div id="walk-text" class="walk-text">
         <h3>Let's Go For A Walk</h3>
 
         <p>The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic.
@@ -74,22 +74,22 @@
         <p>Suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye,
           and my thumb blotted out the planet Earth.</p>
 
-        <div class="btn">
+        <div id="btn" class="btn">
           Sign Up
         </div>
       </div>
 
-      <div class="walk-img">
+      <div id="walk-img" class="walk-img">
         <img src="img/space-walk.png" alt="Space walking astronaut">
       </div>
-
+    
     </section>
 
     <footer>
       <p>Copyright SpaceWalkers 2018</p>
     </footer>
 
-  </div>
+  
 </body>
 
 </html>
